--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 CC = clang++
-CFLAGS = -Wall -Werror -Wextra
+CFLAGS = -fsanitize=address -O1 -fno-omit-frame-pointer -g -Wall -Werror -Wextra
 NAME = test
 INCLUDE = -I ../include/
 
